feat!: breaking feature, java21, gradle8, java records